<resources>
    <string name="app_name">智能泡茶机</string>
    <string name="app_name_english">IntelliJteaMaker</string>

    <string name="title_1">一键泡茶</string>
    <string name="title_2">自定义泡茶</string>
    <string name="custom_makeTea">创建自定义方案</string>

    <string name="text_1">选择茶的种类</string>
    <string name="open">open</string>
    <string name="close">close</string>

    <string name="instantStateTip">未连接</string>

    <string name="greenTea">greenTea</string>
    <string name="redTea">redTea</string>
    <string name="tieGuanYin">tieGuanYin</string>
    <string name="yellowTea">yellowTea</string>
    <string name="whiteTea">whiteTea</string>
    <string name="blackTea">blackTea</string>

    <string name="title_activity_info">info</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="project_name">项目名称：</string>
    <string name="name_xzw_ysr">徐张伟 颜树仁</string>
    <string name="name_dmf">段梦芳 朱小云 何洋</string>
    <string name="person_contain">项目参与人员：</string>
    <string name="teacher_name">周锦荣</string>
    <string name="techer_nameTip">指导老师：</string>
    <string name="Url_tip">源码地址：</string>
    <string name="Url">https://github.com/k7212519/intellijteamaker</string>
    <string name="qq_tip">QQ：</string>
    <string name="qq">791538283</string>

</resources>
