<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.xzw.intellijteamaker.about">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.496">

        <ImageView
            android:id="@+id/img_teamaker"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="47dp"
            android:scaleType="centerInside"
            android:src="@drawable/teamaker" />

        <TextView
            android:id="@+id/project_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_teamaker"
            android:layout_marginTop="51dp"
            android:layout_toStartOf="@+id/project_name_"
            android:text="@string/project_name"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/project_name_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/project_name"
            android:layout_alignBottom="@+id/project_name"
            android:layout_alignStart="@+id/project_english"
            android:text="@string/app_name"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/project_english"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/project_name"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@+id/person"
            android:text="@string/app_name_english"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/teacher_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/project_english"
            android:layout_marginTop="29dp"
            android:layout_toStartOf="@+id/person_r1"
            android:text="@string/techer_nameTip"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/teacher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/teacher_name"
            android:layout_alignBottom="@+id/teacher_name"
            android:layout_toEndOf="@+id/teacher_name"
            android:text="@string/teacher_name"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/person"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/teacher_name"
            android:layout_marginTop="28dp"
            android:text="@string/person_contain"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/person_r1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/person"
            android:layout_alignBottom="@+id/person"
            android:layout_toEndOf="@+id/person"
            android:text="@string/name_dmf"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/person_r2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/person"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@+id/person"
            android:text="@string/name_xzw_ysr"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/person_r2"
            android:layout_marginTop="29dp"
            android:layout_toStartOf="@+id/person_r2"
            android:text="@string/Url_tip"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/address_url"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/address"
            android:layout_alignBottom="@+id/address"
            android:layout_toEndOf="@+id/address"
            android:autoLink="web"
            android:text="@string/Url"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/qq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/address_url"
            android:layout_marginTop="31dp"
            android:layout_toStartOf="@+id/address_url"
            android:text="@string/qq_tip"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/qq_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/qq"
            android:layout_alignBottom="@+id/qq"
            android:layout_toEndOf="@+id/qq"
            android:text="@string/qq"
            android:textSize="13sp" />


    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
